--- a/02-BankReader.Implementation/02-BankReader.Implementation.csproj
+++ b/02-BankReader.Implementation/02-BankReader.Implementation.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.7.0.17535">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\04-BankReader.Data\04-BankReader.Data.csproj" />
   </ItemGroup>
 
