--- a/03-BankReader.Implementation.UnitTests/03-BankReader.Implementation.UnitTests.csproj
+++ b/03-BankReader.Implementation.UnitTests/03-BankReader.Implementation.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -20,6 +20,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\02-BankReader.Implementation\02-BankReader.Implementation.csproj" />
   </ItemGroup>
 
 </Project>
