--- a/Bankreader.Banktransactions/Bankreader.FileSystem.csproj
+++ b/Bankreader.Banktransactions/Bankreader.FileSystem.csproj
@@ -11,6 +11,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Bankreader.Application.csproj" />
+    <ProjectReference Include="..\Domain\Bankreader.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\newtonsoft.json\9.0.1\lib\netstandard1.0\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
