--- a/Bankreader.ConsoleHost/Bankreader.ConsoleHost.csproj
+++ b/Bankreader.ConsoleHost/Bankreader.ConsoleHost.csproj
@@ -5,4 +5,15 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Bankreader.Application.csproj" />
+    <ProjectReference Include="..\Bankreader.Banktransactions\Bankreader.FileSystem.csproj" />
+  </ItemGroup>
+
 </Project>
