--- a/Bankreader.ConsoleHost/Bankreader.ConsoleHost.csproj
+++ b/Bankreader.ConsoleHost/Bankreader.ConsoleHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -14,6 +14,18 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Bankreader.Application.csproj" />
     <ProjectReference Include="..\Bankreader.Banktransactions\Bankreader.FileSystem.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Bankreader.ConsoleHost.UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appSettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
